# doc-triager

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  Makefile  README.md  config.toml.example  cspell.json  pyproject.toml
.devcontainer/: devcontainer.json
docs/: REQUIREMENTS.md  TASK.md
docs/adr/: 0001-project-toolchain.md  0002-llm-integration-library.md
src/doc_triager/: __init__.py  checksum.py  cli.py  config.py  database.py  extractor.py  llm.py  logging_config.py  mover.py  pipeline.py  scanner.py  triage.py
src/doc_triager/prompt/: classify.txt  classify_file.txt  summary.txt
tests/: test_checksum.py  test_cli.py  test_config.py  test_database.py  test_extractor.py  test_llm.py  test_logging_config.py  test_mover.py  test_pipeline.py  test_scanner.py  test_triage.py
